seeder 작성 및 리팩토링
