# storage/api-docs/api-docs.json
@@ -21,12 +21,46 @@
                 ],
                 "summary": "특정 음식점 가져오기",
                 "description": "특정 음식점 아이템을 가져온다.",
-                "operationId": "getTodoById",
+                "operationId": "getEateryById",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
                         "description": "eatery_id(1~50 test-case 있음)",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "응답 성공"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key_security_example": []
+                    }
+                ]
+            }
+        },
+        "/menus/{id}": {
+            "get": {
+                "tags": [
+                    "메뉴 관련"
+                ],
+                "summary": "특정 메뉴 가져오기",
+                "description": "특정 메뉴 아이템을 가져온다.",
+                "operationId": "getMenuById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "menu_id(메뉴아이디 적어주세요.)",
                         "required": true,
                         "schema": {
                             "type": "integer"
